# cg-beleg

./: CMakeLists.txt  README.md  heart_main.cpp  main.cpp  raylite  raytracer  raytracer_heart  raytracer_kdtree  raytracer_torus_front  raytracer_torus_large  raytracer_torus_lower
include/: camera.hpp  geometry.hpp  image.hpp  kdtree.hpp  light.hpp  obj_loader.hpp  raytracer.hpp  renderer.hpp
scenes/: generate.py  generate_car.py  generate_heart_obj.py
src/: kdtree.cpp  light.cpp  raytracer.cpp  renderer.cpp
